[tool.poetry]
name = "pico-ns"
version = "0.1.0"
description = ""
authors = ["Everynet"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
uvloop = "^0.16.0"
structlog = "^21.5.0"
protobuf = "<3.21"
chirpstack-api = "^3.12.4"
paho-mqtt = "^1.6.1"
asyncio-mqtt = "^0.12.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
environs = "^9.5.0"
aiohttp = "^3.8.1"
pylorawan = {git = "https://github.com/everynet/pylorawan.git", rev = "main"}
ran = {git = "https://github.com/everynet/ran.routing.pyclient.git", rev = "main"}


[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
bandit = "^1.7.4"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
flake8-isort = "^4.1.1"
flake8-bandit = "^3.0.0"

[tool.bandit]
targets = ["src", "tests"]

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pip-cache
  | \.poetry
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
